# Practice-Rust

./: .gitignore  README.md  snippets.rs
basic/: Cargo.toml
basic/src/: Readme.md  compile_and_run.sh  debug.rs  main.rs  main_debug_trait.rs  movies_mod.rs
concepts/: Cargo.toml
concepts/src/: main.rs  main_impl.rs
demonise/src/: main.rs
examples/grpc-rusty/: Cargo.toml  README.md
examples/grpc-rusty/src/: client.rs
examples/grpc_intro/: Cargo.toml  example.proto
examples/learning-grpc/: Cargo.toml
examples/learning-grpc/src/: client.rs  server.rs
examples/rust-examples-main/cli-clap-grpc-pingcap-db-diesel/workspace/backend/: Cargo.toml
examples/rust-examples-main/cli_grpc_diesel/backend/: Cargo.toml
examples/rust-examples-main/consul/: Cargo.toml
examples/rust-examples-main/db-diesel-postgres/: Cargo.toml
examples/rust-examples-main/grpc-pingcap/: Cargo.toml
examples/rust-examples-main/proc-macro-attribute/: Cargo.toml
examples/rust-examples-main/redis/: Cargo.toml
examples/rust-examples-main/vault/: Cargo.toml
examples/termsnake-master/: Dockerfile
grpc_prac/helloworld-tonic/: Cargo.toml  helloworld.rs  mod.rs
grpc_prac/helloworld-tonic/proto_models/center_hub/freq_stab_center/: center_to_end.proto  management.proto
grpc_prac/helloworld-tonic/proto_models/center_hub/hal_center/: center_to_end.proto  common.proto  hal_to_qphase_center.proto  management.proto  qpc_to_qphase.proto  qphase_to_qpc.proto
grpc_prac/helloworld-tonic/proto_models/center_hub/qphase_center/: center_to_end.proto  management.proto  qphase_to_calib.proto
grpc_prac/helloworld-tonic/proto_models/end_node/hal_end/: management.proto  (+3 more)
grpc_prac/helloworld-tonic/proto_models/hll_sw/: common.proto  hll_sw_freq_stab_center.proto  hll_sw_qphase_center.proto
grpc_prac/helloworld-tonic/src/: client.rs  server.rs
grpc_prac/routeguide/proto/: route_guide.proto
helloworld_tonic/: Cargo.toml
helloworld_tonic/src/: client.rs  server.rs
memmap/: Cargo.toml
memmap/src/: main.rs_orig  qpc.rs
memmap/src/dump_mem_rust/orig/: 00_dump_physical_memory_in_rust
units/cfg_mngt/: Cargo.toml
units/cfg_mngt/config/: default.toml
units/cfg_mngt/src/: main-0.rs  main.rs  settings.rs
units/clap_practice/: Cargo.toml
units/clap_practice/src/: main.rs
units/cli-clap/: Cargo.toml
units/cli-clap-grpc-pingcap-db-diesel/workspace/models/: Cargo.toml
units/collection/cli-clap-grpc-pingcap-db-diesel/workspace/protos/: Cargo.toml
units/collection/cli-grpc-tonic-blocking/: Cargo.toml
units/demonise/: Cargo.toml
units/docker-shiplift/: Cargo.toml
units/grpc/bitcoin/src/: server.rs
units/grpc_prac/bitcoin/: build.rs
units/grpc_prac/bitcoin/proto/: payments.proto
units/grpc_prac/helloworld-tonic/: Cargo.toml
units/grpc_prac/helloworld-tonic/proto/: helloworld.proto
units/grpc_prac/helloworld-tonic/src/: server.rs
units/grpc_prac/routeguide/: Cargo.toml
units/logging/: Cargo.toml
units/logging/src/: log4rs.rs
units/memmap/src/: main.rs  main_read.rs
units/memmap/src/dump_mem_rust/: main.rs_write
units/nsq/: Cargo.toml
units/opencl_ex/: Cargo.toml  opencl_ex.c
units/proc-macro/: Cargo.toml
units/sm_handling/: Cargo.toml
units/sm_handling/src/: main.rs
units/unit_testing/src/: lib.rs
units/web-configuration/config/: Default.toml
(+6 files in other folders)
