[package]
name = "prac_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
memmap = "0.7.0"
volatile = "0.4.4"
clap = { version = "4.1.0", features = ["derive"] }
math = "0.10.0"
