[package]
name = "learning-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
prost = "0.11.0"
#systemd = "0.10"

[lib]
path = "./src/lib.rs"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[build-dependencies]
tonic-build = "0.8.2"
