[package]
name = "grpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server.rs and client.rs are marked as binary crates.
[[bin]]
# server.rs is going to be compiled to a library called payments-server
name = "payments-server"
path = "src/server.rs"

[[bin]]
# client.rs is going to be compiled to a library called payments-client
name = "payments-client"
path = "src/client.rs"

[dependencies]

# gRPC implementation for Rust
tonic = "0.8.2"

# Protocol buffer implementation for Rust
prost = "0.11.0"

# Most popular async runtime for Rust. This enables Macros and Multi-threaded run time feagures.
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]

# Tonic-build dependency allows the cargo to build the protocol buf during the compilation.
# We also need to add a build.rs file in the root directory.
tonic-build = "0.8.2"
