[package]
name = "cfg_mngt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = "0.13.3"
serde = "1.0"
serde_derive = "1.0"
config-file = "0.2.3"
# tokio = { version = "1.26.0", features = ["macros", "rt-threaded"] }
lazy_static = "1.4"
syslog = "6.0.1"
